docs: update MinerU README and spec to v2.7.0

--- a/mineru/spec.yaml
+++ b/mineru/spec.yaml
@@ -1,7 +1,7 @@
 backend_name: MinerU-custom
 default_run_command: mineru-vllm-server --port {{port}} --served-model-name {{model_name}}
 version_configs:
-  v2.6.4:
-    image_name: mineru:v2.6.4
+  v2.7.0:
+    image_name: gpustackcommunity/mineru:v2.7.0
     custom_framework: cuda
-default_version: v2.6.4
+default_version: v2.7.0
