feat: update backend names in spec.yaml and add bundling script

--- a/kokoro/spec.yaml
+++ b/kokoro/spec.yaml
@@ -1,4 +1,4 @@
-backend_name: kokoro-custom
+backend_name: kokoro
 version_configs:
   latest:
     image_name: ghcr.io/remsky/kokoro-fastapi-gpu:latest
